# Computer_Project_Network

./: .gitignore  AppControl.cpp  AppControl.h  CMakeLists.txt  HackerSimulator.sln  ProcControl.cpp  ProcControl.h  ProcessControl_WIN.h  README.md  client.html  client_runner.py  demo.cpp  package-lock.json  run.bat  test_client.py
.cache/clangd/index/: Agent.cpp.07A1D7D98B458379.idx  Agent.hpp.01773AFF8AEF35C0.idx  AppControl_MAC.cpp.AC123F48002D6202.idx  AppControl_MAC.h.0170A2A299EEBE07.idx  CameraCapture.cpp.4D356C683FD4BA97.idx  CameraCapture.h.741E1C2C4ADD9E26.idx  CameraRecorder.cpp.BF71CDDDE1B7A47A.idx  CameraRecorder.h.EEB1E34588C61AA7.idx  CaptureScreen.cpp.8E1FF63AFE16FC20.idx  CaptureScreen.h.F7FC3853091991B5.idx  CommandDispatcher.cpp.3F9A305BE2636688.idx  CommandDispatcher.hpp.7B37D052801EAB7F.idx  Config.hpp.008E81CCB9660AF5.idx  Converter.cpp.09A662845F33C843.idx  Converter.h.F3E1F701BB63E66B.idx  FFmpegHelper.cpp.DCB7E18253412256.idx  FFmpegHelper.h.C0BD377C481176A7.idx  FeatureLibrary.h.79449B1854C30F37.idx  FileList.cpp.5401BD1EDFE23FCD.idx  FileList.h.368F902A96660097.idx  GatewayDiscovery.cpp.407B3A71F92F7C4E.idx  GatewayDiscovery.h.960C7B547A22C397.idx  KeyboardController.h.772C5FF7B854D893.idx  KeyboardController_MAC.cpp.2D617B9CFB522A58.idx  MachineId.cpp.F0329C40A59B4ED8.idx  MachineId.h.54D917A845CE77F3.idx  Message.hpp.4FD5E6E4C0670190.idx  PasswordDetector.cpp.2FD89C1DFA917998.idx  PasswordDetector.h.5D3C7E1FD35908CB.idx  PlatformModules.h.65B2B69EDD40587D.idx  (+11 more)
Agent/: CMakeLists.txt  agent.manifest  agent.rc  server.cert  vcpkg.json
Agent/cmake/: linux.cmake  macos.cmake  windows.cmake
Agent/include/core/: Agent.hpp
Agent/include/handlers/: CommandDispatcher.hpp
Agent/include/modules/: CameraCapture.h  CameraRecorder.h  CaptureScreen.h  FastCapture.h  FileTransfer.h  InputManager.hpp  KeyboardController.h  PlatformModules.h  ProcessControl_LINUX.h  ProcessControl_WIN.h  ScreenRecorder.h  SystemInfoController.hpp
Agent/include/network/: WSConnection.hpp
Agent/include/utils/: Converter.h  FFmpegHelper.h  FeatureLibrary.h  GatewayDiscovery.h  Message.hpp  PrivilegeEscalation.h  Protocol.hpp  base64.h
Agent/src/: main.cpp
Agent/src/core/: Agent.cpp
Agent/src/handlers/: CommandDispatcher.cpp
Agent/src/modules/: AppControl_WIN.cpp  CameraCapture.cpp  CameraRecorder.cpp  CaptureScreen.cpp  FastCapture.cpp  FileList.cpp  FileTransfer.cpp  InputManager_LINUX.cpp  InputManager_MAC.cpp  InputManager_WIN.cpp  KeyboardController_LINUX.cpp  KeyboardController_MAC.cpp  KeyboardController_WIN.cpp  ProcessControl_LINUX.cpp  ProcessControl_MAC.cpp  ProcessControl_WIN.cpp  ScreenRecorder.cpp  SystemInfoController.cpp
Agent/src/network/: WSConnection.cpp
Agent/src/utils/: FFmpegHelper.cpp  GatewayDiscovery.cpp  PasswordDetector.cpp  PrivilegeEscalation.cpp
Demo_Client/Demo_Client/: Demo_Client.cpp  Demo_Client.vcxproj
Demo_Server/Demo_Server/: Demo_Server.cpp  Demo_Server.vcxproj  RCa16720
Gateway/: .env  .gitignore  package-lock.json  package.json  server.cert  server.key  tsconfig.json
Gateway/Website/: App_Menu.html  Proc_Menu.html  advanced_menu.html  file_manager.html  index.html  power_control.html  screen_webcam.html  system_info.html
Gateway/data/: agent_history.json  client_cache.json  gateway.db
Gateway/rat-gateway-linux-v1.0/: .env
Gateway/rat-gateway-win-v1.0/: .env
Gateway/src/: config.ts  index.ts
Web/js/: tailwind.config.js
Website/: App_Menu.html  AvailableServer.html  Feature_menu.html  Proc_Menu.html  advanced_menu.html  app_process.html  index.html  keylog.html  menu.html  power_control.html  remote_control.html  screen_webcam.html  server.py  shutdown_restart.html  webcam_capture.html
Website/css/: style.css
Website/js/: main.js  script.js
client/: CMakeLists.txt  run.bat
client/include/: ClientApp.hpp  ConnectionManager.hpp  Discovery.hpp  Message.hpp  Protocol.hpp  Router.hpp  WSConnection.hpp
client/src/: ClientApp.cpp  ConnectionManager.cpp  WSConnection.cpp  main.cpp
server/: CMakeLists.txt  run.bat  server.key  vcpkg.json
server/config/: Config.hpp
server/include/: AppControl_MAC.h  AppControl_WIN.h  CameraRecorder.h  CaptureScreen.h  CommandManager.hpp  Converter.h  Discovery.hpp  Gateway.hpp  KeyboardController.h  Message.hpp  ProcessControl_MAC.h  ProcessControl_WIN.h  Protocol.hpp  Router.hpp  Session.hpp  WSConnection.hpp  WSServer.hpp  WebcamController.h  feature_library.h  library.h
server/include/core/: Agent.hpp
server/include/handlers/: CommandDispatcher.hpp
server/include/modules/: AppControl_LINUX.h  AppControl_MAC.h  AppControl_WIN.h  CameraCapture.h  CameraRecorder.h  CaptureScreen.h  FileList.h  FileTransfer.h  KeyboardController.h  PlatformModules.h  ProcessControl_MAC.h  ProcessControl_WIN.h  ScreenRecorder.h
server/include/network/: WSConnection.hpp
server/include/utils/: FFmpegHelper.h  FeatureLibrary.h  GatewayDiscovery.h  MachineId.h  PasswordDetector.h  PrivilegeEscalation.h  Protocol.hpp
server/src/: CommandManager.cpp  Converter.cpp  Gateway.cpp  Session.cpp  WSConnection.cpp  WSServer.cpp  main.cpp
server/src/core/: Agent.cpp
server/src/feature/: AppControl_MAC.cpp  AppControl_WIN.cpp  ProcessControl_WIN.cpp  WebcamController.cpp
server/src/handlers/: CommandDispatcher.cpp
server/src/module/: AppControl_MAC.cpp  CameraRecorder.cpp  CaptureScreen.cpp  KeyboardController.cpp  ProcessControl_MAC.cpp  WebcamController.cpp
server/src/modules/: AppControl_LINUX.cpp  AppControl_MAC.cpp  AppControl_WIN.cpp  CameraCapture.cpp  CameraRecorder.cpp  CaptureScreen.cpp  KeyboardController.cpp  KeyboardController_LINUX.cpp  KeyboardController_MAC.cpp  KeyboardController_WIN.cpp  ProcessControl_LINUX.cpp  ProcessControl_MAC.cpp  ProcessControl_WIN.cpp  ScreenRecorder.cpp
server/src/network/: WSConnection.cpp
server/src/utils/: FFmpegHelper.cpp  GatewayDiscovery.cpp  MachineId.cpp  PrivilegeEscalation.cpp
src/client/: WebSocketClient.hpp  WebSocketService.hpp  client.cpp
src/server/: Listener.hpp  WebSocketSession.hpp  server.cpp
(+70 files in other folders)
